# chronicle

./: .gitignore  Cargo.toml  Dockerfile  README.md  justfile  lyrad.toml
catalog/: Cargo.toml
catalog/src/: lib.rs  memory_catalog.rs  oxia_catalog.rs
catalog/tests/: options.rs
chronicled/lens/: Cargo.toml
chronicled/lens/src/: error.rs  lib.rs
chronicled/sink/: Cargo.toml
chronicled/sink/src/: error.rs
chronicled/src/: lib.rs  observability.rs
chronicled/src/actor/: read_handle_actor.rs  write_handle_actor.rs
chronicled/src/option/: unit_options.rs
chronicled/src/segment/: direct.rs  mmap.rs
chronicled/src/storage/: mod.rs  retention.rs
chronicled/src/storage/blob/: compaction.rs  compaction_l1.rs  compaction_l2.rs  compaction_l3.rs  compaction_l4.rs  compaction_level.rs  copy.rs  manager.rs  mod.rs  remote.rs  writer.rs
chronicled/src/storage/index/: storage.rs
chronicled/src/storage/wal/: mod.rs  wal.rs
chronicled/src/storage/write_cache/: mod.rs
chronicled/src/unit/: admin_service.rs  mod.rs  unit.rs  unit_service.rs  write_path.rs
chronicled/src/wal/: checkpoint.rs  mod.rs  wal.rs
chronicled/unit/src/option/: unit.rs
chronicled/unit/src/storage/: mod.rs
chronicled/unit/src/storage/wal/: mod.rs
chronicled/xunit/: Cargo.toml
chronicles/cli/: Cargo.toml
chronicles/cli/src/: banner.rs  main.rs  module.rs  sql.rs  unit.rs  verify.rs
chronicles/libchronicle/: Cargo.toml
chronicles/libchronicle/examples/: basic.rs  fetch.rs  record.rs  tail.rs  timeline_options.rs
chronicles/libchronicle/src/: chronicle.rs  conn.rs  conn_pool.rs  cursor.rs  error.rs  error_inner.rs  lib.rs  metric.rs  recoverable_stream.rs  state_machine.rs  timeline.rs  write_group.rs
chronicles/libchronicle/src/conn/: conn.rs  conn_pool.rs  mod.rs  recoverable_stream.rs
chronicles/libchronicle/src/timeline/: cursor.rs  ensemble.rs  mod.rs  state_machine.rs  timeline.rs
conf/: functions.toml  orchestrator.toml  sql.toml  unit.toml
deploy/: grafana-dashboard.json  grafana.yaml  prometheus.yaml  verify-job.yaml
deploy/charts/chronicle/: values.yaml
deploy/charts/chronicle/templates/: component-deployments.yaml  configmap.yaml  statefulset.yaml
deploy/charts/lyra/: Chart.yaml  values.yaml
deploy/charts/lyra/templates/: component-deployments.yaml  configmap.yaml  service.yaml  statefulset.yaml
lyra/cli/: Cargo.toml
lyra/cli/src/: banner.rs  lib.rs  main.rs  module.rs  process.rs  sql.rs  unit.rs  verify.rs
lyra/liblyra/: Cargo.toml
lyra/liblyra/examples/: basic.rs  record.rs
lyra/liblyra/src/: error.rs  error_inner.rs  lib.rs  lyra.rs  metric.rs  xunit.rs
lyra/liblyra/src/conn/: conn.rs  conn_pool.rs  mod.rs  recoverable_stream.rs
lyra/liblyra/src/timeline/: cursor.rs  ensemble.rs  state_machine.rs  timeline.rs
lyra/libxunit/: Cargo.toml
lyra/libxunit/src/: error.rs  lib.rs
lyrad/connector/: Cargo.toml
lyrad/connector/src/: error.rs  lib.rs
lyrad/functions/: Cargo.toml
lyrad/functions/src/: error.rs  lib.rs
lyrad/lens/: Cargo.toml
lyrad/lens/src/: ddl.rs  error.rs  flight_sql.rs  lib.rs  output.rs  planner.rs  service.rs
lyrad/orchestrator/: Cargo.toml
lyrad/orchestrator/src/: ddl.rs  error.rs  flight_sql.rs  lib.rs  output.rs  planner.rs  service.rs  statement.rs
lyrad/query/: Cargo.toml
lyrad/query/src/: ddl.rs  error.rs  flight_sql.rs  lib.rs  output.rs  planner.rs  service.rs
lyrad/sink/: Cargo.toml
lyrad/sink/src/: lib.rs
lyrad/unit/: Cargo.toml
lyrad/unit/src/: unit.rs  unit_service.rs
lyrad/unit/src/option/: mod.rs
lyrad/unit/src/storage/: buffer.rs  cache.rs  mod.rs
lyrad/unit/src/storage/ss/: mod.rs
lyrad/xunit/: Cargo.toml
lyrad/xunit/src/: error.rs  lib.rs
proto/: Cargo.toml  build.rs  pb_admin.proto  pb_catalog.proto  pb_external.proto  pb_storage.proto
proto/src/: lib.rs
tla+/: Chronicle.tla  Lyra.cfg  Lyra.tla
