[package]
name = "catalog"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
chronicle-proto = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
liboxia = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
