[package]
name = "lyra-proto"
version = "0.1.0"
edition = "2024"
resolver = "3"


[dependencies]
tonic = { workspace = true }
tonic-build = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
prost-build = "0.13.5"