[package]
name = "chronicle-lens"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
catalog = { path = "../../catalog" }
libxunit = { path = "../../chronicles/libxunit" }
thiserror = { workspace = true }

[dev-dependencies]
chronicle-xunit = { path = "../xunit" }
tokio = { workspace = true }
