[package]
name = "chronicle-sink"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
catalog = { path = "../../catalog" }
libchronicle = { path = "../../chronicles/libchronicle" }
libxunit = { path = "../../chronicles/libxunit" }
thiserror = { workspace = true }
tracing = { workspace = true }
