[package]
name = "chronicle-xunit"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
catalog = { path = "../../catalog" }
libxunit = { path = "../../chronicles/libxunit" }
async-trait = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
