[package]
name = "lyra-query"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
catalog = { path = "../../catalog" }
arrow-array = { workspace = true }
arrow-flight = { workspace = true }
arrow-schema = { workspace = true }
futures-util = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tokio-stream = { workspace = true, features = ["net"] }
